try to sort the address bar issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ h2 {
 	left: 0;
 	bottom: 0;
 	right: 0;
-	width: 100%;
-	height: 110%;
+	width: 100vw;
+	height: 100vh;
 	background: url(../assets/darktower.jpeg) no-repeat center;
 	background-size: cover;
 	z-index: -1;
